- Add React router

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 	"author": "Kio",
 	"license": "ISC",
 	"dependencies": {
+		"lodash": "^4.17.11",
 		"react": "^16.5.2",
-		"react-dom": "^16.5.2"
+		"react-dom": "^16.5.2",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
