--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 	"author": "Kio",
 	"license": "ISC",
 	"dependencies": {
+		"bootstrap": "^4.2.1",
+		"clean-webpack-plugin": "^1.0.0",
 		"lodash": "^4.17.11",
+		"postcss-loader": "^3.0.0",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"react-router": "^4.3.1",
