--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 	"license": "ISC",
 	"dependencies": {
 		"bootstrap": "^4.2.1",
-		"clean-webpack-plugin": "^1.0.0",
 		"lodash": "^4.17.11",
-		"postcss-loader": "^3.0.0",
+		"prop-types": "^15.6.2",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1"
+		"react-router-dom": "^4.3.1",
+		"validate.js": "^0.12.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
@@ -31,17 +31,16 @@
 		"@babel/preset-env": "^7.0.0-beta.51",
 		"@babel/preset-react": "^7.0.0-beta.51",
 		"babel-loader": "^8.0.0-beta.0",
+		"clean-webpack-plugin": "^1.0.0",
 		"copy-webpack-plugin": "^4.5.1",
 		"css-loader": "^0.28.11",
 		"file-loader": "^2.0.0",
 		"html-webpack-plugin": "^3.2.0",
-		"image-webpack-loader": "^4.6.0",
 		"mini-css-extract-plugin": "^0.4.3",
 		"node-sass": "^4.8.3",
 		"optimize-css-assets-webpack-plugin": "^4.0.0",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.21.0",
-		"svg-inline-loader": "^0.8.0",
 		"uglifyjs-webpack-plugin": "^1.2.5",
 		"webpack": "^4.12.0",
 		"webpack-cli": "^3.0.8",
